<resources>
    <string name="login_email">login_email</string>
    <string name="login_password">login_password</string>
    <!--쿠폰정보-->
    <string name="kind">kind</string>
    <string name="email">email</string>
    <string name="coupon">coupon</string>
    <string name="device">device</string>
    <string name="code">code</string>
    <string name="message">message</string>
    <string name="sdate">sdate</string>
    <string name="edate">edate</string>
    <string name="JSN">JSN</string>
    <string name="ERR">ERR</string>
    <string name="DAT">DAT</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">설정</string>
    <string name="action_settings">설정</string>

    <!-- 설정화면 -->
    <string name="pref_header_login_coupon">로그인 및 쿠폰</string>
    <string name="pref_login">로그인</string>
    <string name="pref_coupon">쿠폰등록</string>
    <string name="pref_header_app_infomation">앱정보</string>
    <string name="pref_notice">공지사항</string>
    <string name="pref_privacy_policy">개인정보 처리방침</string>
    <string name="pref_app_version">현재버전</string>
    <string name="pref_app_opensource">오픈소스라이센스</string>

    <!-- Example General preference -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example preference for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example preference for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to login -->
    <string name="title_activity_coupon">쿠폰입력창</string>
    <string name="prompt_coupon">-없이 영어/숫자 조합 16자리를 입력해주세요.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_coupon_in">확인</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_coupon">쿠폰번호 입력오류 발생</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--쿠폰입력화면-->
    <string name="text_coupon_input">이용권 쿠폰번호를 입력해 주세요.\n\n&quot;이용권&quot; 분실시 책임지지 않습니다.\n</string>
    <string name="text_coupon_info">-쿠폰은 등록한 시점부터 바로 적용됩니다.\n\n-사용기간이 지난 쿠폰은 등록이 불가합니다.\n\n-쿠폰번호 입력시 (-)는 제외하고 입력해 주세요.</string>
    <string name="text_coupon_date">기간:2018/01/01 00:00~2018/01/01 00:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_already_coupon">사용인 쿠폰:%s이 있습니다. 기간을 확인해주세요.</string>
    <string name="message_already_coupon_1">사용인 쿠폰이 있습니다. 기간을 확인해주세요.</string>
</resources>
